--- a/bitrix/templates/main/1-1otdel.html
+++ b/bitrix/templates/main/1-1otdel.html
@@ -330,6 +330,149 @@
                             </div>
                           </div>
                         </div>
+                        <div class="service-letters">
+                          <div class="service-letters-inner">
+                            <div class="service-letter js-filter-letter" data-letter="а">
+                              <div class="service-letter-inner">а</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="б">
+                              <div class="service-letter-inner">б</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="в">
+                              <div class="service-letter-inner">в</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="г">
+                              <div class="service-letter-inner">г</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="д">
+                              <div class="service-letter-inner">д</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="е">
+                              <div class="service-letter-inner">е</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="Ё">
+                              <div class="service-letter-inner">Ё</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="Ж">
+                              <div class="service-letter-inner">Ж</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="з">
+                              <div class="service-letter-inner">з</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="и">
+                              <div class="service-letter-inner">и</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="й">
+                              <div class="service-letter-inner">й</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="к">
+                              <div class="service-letter-inner">к</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="л">
+                              <div class="service-letter-inner">л</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="м">
+                              <div class="service-letter-inner">м</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="н">
+                              <div class="service-letter-inner">н</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="о">
+                              <div class="service-letter-inner">о</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="п">
+                              <div class="service-letter-inner">п</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="р">
+                              <div class="service-letter-inner">р</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="с">
+                              <div class="service-letter-inner">с</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="т">
+                              <div class="service-letter-inner">т</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="у">
+                              <div class="service-letter-inner">у</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ф">
+                              <div class="service-letter-inner">ф</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="х">
+                              <div class="service-letter-inner">х</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ц">
+                              <div class="service-letter-inner">ц</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ч">
+                              <div class="service-letter-inner">ч</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ш">
+                              <div class="service-letter-inner">ш</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="щ">
+                              <div class="service-letter-inner">щ</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ъ">
+                              <div class="service-letter-inner">ъ</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ы">
+                              <div class="service-letter-inner">ы</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ь">
+                              <div class="service-letter-inner">ь</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="э">
+                              <div class="service-letter-inner">э</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="ю">
+                              <div class="service-letter-inner">ю</div>
+                            </div>
+                            <div class="service-letter js-filter-letter" data-letter="я">
+                              <div class="service-letter-inner">я</div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="service-items">
+                          <div class="service-item">
+                            <div class="service-item-container">
+                              <div class="service-item-item">
+                                <div class="service-item-letter">A</div>
+                                <ul class="service-item-links">
+                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
+                                </ul>
+                              </div>
+                              <div class="service-item-item">
+                                <div class="service-item-letter">Д</div>
+                                <ul class="service-item-links">
+                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
+                                </ul>
+                              </div>
+                              <div class="service-item-item">
+                                <div class="service-item-letter">М</div>
+                                <ul class="service-item-links">
+                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
+                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
+                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
+                                  <li><a class="text" href="#">Магнитно-резонансная ангиография интракраниальных сосудов</a></li>
+                                  <li><a class="text" href="#">Магнитно-резонансная томография всего позвоночника (всех отделов)</a></li>
+                                  <li><a class="text" href="#">Магнитно-резонансная томография головного мозга</a></li>
+                                </ul>
+                              </div>
+                            </div>
+                            <div class="btn js-expand"><span>Смотреть все 118 услуг</span></div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
