--- a/src/pug/1-1otdel.pug
+++ b/src/pug/1-1otdel.pug
@@ -90,6 +90,161 @@ block content
 									.title.h2 Услуги отделения
 								.service-search 
 									include includes/_suggest.pug
+							.service-letters
+								.service-letters-inner
+									- var letters = ['а','б','в','г','д','е','Ё','Ж','з','и','й','к','л','м','н','о','п','р','с','т','у','ф','х','ц','ч','ш','щ','ъ','ы','ь','э','ю','я']
+									each letter in letters
+										.service-letter.js-filter-letter(data-letter=letter)
+											.service-letter-inner= letter
+							.service-items
+								.service-item
+									//- .service-item-title
+									//- 	.title.h2 Клинико-диагностическая лаборатория
+									.service-item-container
+										.service-item-item
+											.service-item-letter
+												|A
+											ul.service-item-links
+												li
+													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+												li
+													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+												li
+													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+												li
+													a(href="#").text Акустическая терапия почек и верхних мочевых путей
+												li
+													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+										.service-item-item
+											.service-item-letter
+												|Д
+											ul.service-item-links
+												li
+													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+												li
+													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+												li
+													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+												li
+													a(href="#").text Акустическая терапия почек и верхних мочевых путей
+												li
+													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+										.service-item-item
+											.service-item-letter
+												|М
+											ul.service-item-links
+												li
+													a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+												li
+													a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+												li
+													a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+												li
+													a(href="#").text Акустическая терапия почек и верхних мочевых путей
+												li
+													a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+												li
+													a(href="#").text Магнитно-резонансная ангиография интракраниальных сосудов
+												li
+													a(href="#").text Магнитно-резонансная томография всего позвоночника (всех отделов)
+												li
+													a(href="#").text Магнитно-резонансная томография головного мозга
+									.btn.js-expand
+										span Смотреть все 118 услуг
+							//- .service-items
+							//- 	.service-item
+							//- 		.service-item-title
+							//- 			.title.h2 Клинико-диагностическая лаборатория
+							//- 		.service-item-container
+							//- 			.service-item-subtitle
+							//- 				.title.h3 Онкология
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|A
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|Д
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|Д
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+							//- 		.service-item-container
+							//- 			.service-item-subtitle
+							//- 				.title.h3 Травматология
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|A
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|Д
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
+							//- 			.service-item-item
+							//- 				.service-item-letter
+							//- 					|Д
+							//- 				ul.service-item-links
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия через небулайзер (без препарата)
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Пульмикортом через небулайзер
+							//- 					li
+							//- 						a(href="#").text Аэрозольтерапия Вентолином через небулайзер
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия почек и верхних мочевых путей
+							//- 					li
+							//- 						a(href="#").text Акустическая терапия мочевого пузыря и предстательной железы
 
 						
 	include includes/_slider.pug
