--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -439,6 +439,7 @@ body, .out {
   font-weight: 600;
   text-align: center;
   overflow: hidden;
+  cursor: pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -2745,11 +2746,125 @@ body, .out {
     left: 1.4375rem;
     top: -webkit-calc(50% - .5rem);
     top: calc(50% - .5rem); }
-  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+
+.service-wrapper {
+  margin-bottom: 7.5rem; }
+  .service-wrapper .btn {
+    width: 100%; }
+
+.service-head {
+  font-size: 0;
+  margin-top: 0.3125rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .service-head > div {
+    width: 50%; }
+
+.service-search {
+  padding-left: 1.25rem; }
+  .service-search .search-wrapper {
+    margin-right: -0.625rem; }
+
+.service-letters {
+  margin-top: 1.5625rem; }
+  .service-letters-inner {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    border-bottom: 2px solid #80baa6;
+    border-bottom: 2px solid var(--color-primary);
+    min-width: 41.875rem; }
+
+.service-letter-inner {
+  font-size: 0.9375rem;
+  color: #cdcdcd;
+  text-transform: uppercase;
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem; }
+
+.service-letter.selected {
+  color: #323232;
+  color: var(--color-textblk);
+  cursor: pointer; }
+  .service-letter.selected.active {
+    color: #80baa6;
+    color: var(--color-primary); }
+
+.service-letter:not(.selecte) {
+  pointer-events: none; }
+
+.service-item {
+  display: block; }
+  .service-item-container {
+    margin: 2.8125rem 0; }
+  .service-item-title {
+    margin-bottom: 3.75rem;
+    margin-top: 2.8125rem; }
+  .service-item-subtitle {
+    margin: -1.25rem 0 2.1875rem; }
+    .service-item-subtitle .title {
+      font-size: 1.375rem; }
+  .service-item-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    margin-right: -1.875rem; }
+    .service-item-item:not(:last-child) {
+      margin-bottom: 3.125rem; }
+  .service-item-letter {
+    width: 4.375rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    padding-left: 0.9375rem; }
+  .service-item-links {
+    font-size: 0;
+    margin-top: -0.8125rem;
+    width: -webkit-calc(100% - 4.375rem);
+    width: calc(100% - 4.375rem); }
+    .service-item-links li {
+      display: inline-block;
+      width: 33%;
+      vertical-align: top;
+      padding-right: 1.875rem;
+      line-height: 1.7; }
+      .service-item-links li a {
+        padding: 0.8125rem 0; }
+      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
   * {
     -webkit-text-size-adjust: none; } }
-  @media not all and (-moz-touch-enabled: 1), not all and (pointer: coarse), not all and (-ms-high-contrast: none) and (max-width: 600px) {
+      @media not all and (-moz-touch-enabled: 1), not all and (pointer: coarse), not all and (-ms-high-contrast: none) and (max-width: 600px) {
 
   .btn:hover {
     background-color: #d56c72;
@@ -2906,8 +3021,12 @@ body, .out {
 
   .link-back:hover {
     border-color: #80baa6;
-    border-color: var(--color-primary); } }
-  @media only screen and (max-width: 1220px) {
+    border-color: var(--color-primary); }
+
+  .service-item-links li a:hover {
+    color: #d56c72;
+    color: var(--color-secondary); } }
+      @media only screen and (max-width: 1220px) {
 
   .page__header.is-hidden .header-row-nav {
     padding-left: 1%; }
@@ -2921,26 +3040,26 @@ body, .out {
 
   .page__header-drop-cont {
     padding-left: 15rem; } }
-  @media only screen and (max-width: 1200px) {
+      @media only screen and (max-width: 1200px) {
 
   .about-img {
     padding-left: 8.5%; }
 
   .promoslider-wrap .index-slider-content {
     max-width: 28.125rem; } }
-  @media only screen and (max-width: 1150px) {
+      @media only screen and (max-width: 1150px) {
 
   html {
     font-size: 15px; } }
-  @media only screen and (max-width: 1140px) {
+      @media only screen and (max-width: 1140px) {
 
   .page__header.is-hidden .page__header-drop-cont {
     padding-left: 7.5rem; } }
-  @media only screen and (max-width: 1130px) {
+      @media only screen and (max-width: 1130px) {
 
   .page__header.is-hidden .logo-inner-text {
     display: none; } }
-  @media only screen and (max-width: 1100px) {
+      @media only screen and (max-width: 1100px) {
 
   .footer-links-add:last-child {
     width: 53%; }
@@ -2950,7 +3069,7 @@ body, .out {
 
   .index-slider .arr-wrap {
     right: 15.625rem; } }
-  @media only screen and (max-width: 1050px) {
+      @media only screen and (max-width: 1050px) {
 
   .header-row-tels .tel-wrap-inner:not(:first-child) {
     margin-left: 1.5625rem; }
@@ -2960,7 +3079,7 @@ body, .out {
 
   .dropdown-inner:not(.spec) {
     padding: 1.875rem 1.5625rem; } }
-  @media only screen and (max-width: 1040px) {
+      @media only screen and (max-width: 1040px) {
 
   .aside-menu {
     width: 17.0625rem; }
@@ -2968,7 +3087,7 @@ body, .out {
   .aside-content {
     width: -webkit-calc(100% - 17.0625rem);
     width: calc(100% - 17.0625rem); } }
-  @media only screen and (max-width: 1024px) {
+      @media only screen and (max-width: 1024px) {
 
   .header-row-top .nav-wrap {
     padding-left: 1%; }
@@ -2983,7 +3102,7 @@ body, .out {
 
   .wide-slider {
     margin-right: -35vw; } }
-  @media only screen and (max-width: 970px) {
+      @media only screen and (max-width: 970px) {
 
   body.menu-open .header-row-tels .tel-wrap {
     min-width: 0 !important; }
@@ -2994,14 +3113,14 @@ body, .out {
   .header-row-tels .tel-wrap .dropdown-target {
     width: 25rem;
     left: auto !important; } }
-  @media only screen and (min-width: 961px) {
+      @media only screen and (min-width: 961px) {
 
   .header-row-tels .tel-wrap-inner:last-child .tel-item svg {
     display: none; }
 
   .page__header:not(.is-hidden) .header-bottom-mobnav {
     display: none; } }
-  @media only screen and (max-width: 960px) {
+      @media only screen and (max-width: 960px) {
 
   body.menu-open .header-mainwrap {
     -webkit-transform: none !important;
@@ -3072,7 +3191,7 @@ body, .out {
 
   .news-item {
     margin-bottom: 3.125rem; } }
-  @media only screen and (max-width: 930px) {
+      @media only screen and (max-width: 930px) {
 
   .footer-links-add {
     width: 37% !important; }
@@ -3082,11 +3201,11 @@ body, .out {
 
   .mainmenu-inner .box .footer-links .footer-links-main {
     width: 35%; } }
-  @media only screen and (min-width: 901px) {
+      @media only screen and (min-width: 901px) {
 
   .aside-title {
     display: none; } }
-  @media only screen and (max-width: 900px) {
+      @media only screen and (max-width: 900px) {
 
   .index-slider {
     margin-right: -18.75rem; }
@@ -3109,6 +3228,9 @@ body, .out {
   .aside-menu-stick {
     position: static !important; }
 
+  .aside-menu-stick + div {
+    display: none; }
+
   .aside-content {
     width: 100%; }
 
@@ -3117,7 +3239,7 @@ body, .out {
     overflow: hidden;
     -webkit-transition: max-height 0.3s ease-in-out;
     transition: max-height 0.3s ease-in-out; } }
-  @media only screen and (max-width: 820px) {
+      @media only screen and (max-width: 820px) {
 
   .header-row-bottom {
     height: 4.8125rem; }
@@ -3148,7 +3270,11 @@ body, .out {
 
   .page-head {
     padding-top: 4.8125rem; } }
-  @media only screen and (min-width: 768px) {
+      @media only screen and (max-width: 800px) {
+
+  .service-item-links li {
+    width: 50%; } }
+      @media only screen and (min-width: 768px) {
 
   .page__content::-webkit-scrollbar {
     width: 0.25rem; }
@@ -3158,7 +3284,7 @@ body, .out {
     border-radius: 0.1875rem;
     background: #888888;
     cursor: pointer; } }
-  @media only screen and (max-width: 740px) {
+      @media only screen and (max-width: 740px) {
 
   .footer .box {
     position: relative;
@@ -3223,7 +3349,7 @@ body, .out {
     max-width: 800px;
     width: auto;
     margin: 0 -0.625rem; } }
-  @media only screen and (max-width: 700px) {
+      @media only screen and (max-width: 700px) {
 
   .footer-footer-inner {
     padding-top: 1.25rem;
@@ -3239,8 +3365,30 @@ body, .out {
     display: block;
     text-align: left;
     margin: 0.625rem 0;
-    width: 100%; } }
-  @media only screen and (max-width: 630px) {
+    width: 100%; }
+
+  .service-head > div {
+    width: 100%; }
+
+  .service-head .service-search {
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    padding: 0;
+    margin: 0 -0.625rem; }
+
+  .service-head .service-title {
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    margin-top: 0.9375rem; }
+
+  .service-letters {
+    overflow-x: auto;
+    margin-top: 0.625rem; } }
+      @media only screen and (max-width: 630px) {
 
   .promoslider-wrap .index-slider-btns-wrap {
     margin-left: auto;
@@ -3248,7 +3396,7 @@ body, .out {
 
   .promoslider-wrap .index-slider-btns-wrap .btn {
     margin-bottom: 1rem; } }
-  @media only screen and (min-width: 601px) {
+      @media only screen and (min-width: 601px) {
 
   .wrapper.gray.special .box {
     position: relative;
@@ -3278,7 +3426,7 @@ body, .out {
 
   .promoslider-wrap .index-slider-item-inner {
     text-align: right; } }
-  @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 600px) {
 
   .mainmenu-inner .box {
     -webkit-box-orient: horizontal;
@@ -3427,14 +3575,24 @@ body, .out {
     font-size: 0.8125rem; }
 
   .link-back {
-    margin: 1.25rem 0; } }
-  @media only screen and (max-width: 550px) {
+    margin: 1.25rem 0; }
+
+  .service-item-letter {
+    width: 3.125rem; }
+
+  .service-item-links {
+    width: -webkit-calc(100% - 3.125rem);
+    width: calc(100% - 3.125rem); }
+
+  .service-item-links li {
+    width: 100%; } }
+      @media only screen and (max-width: 550px) {
 
   .header-mainwrap .top-link.primary .dropdown-target {
     right: -6.875rem;
     width: auto;
     left: auto; } }
-  @media only screen and (max-width: 540px) {
+      @media only screen and (max-width: 540px) {
 
   .footer-right .tel-wrap {
     margin-top: 2.9375rem;
@@ -3454,11 +3612,11 @@ body, .out {
 
   .tel-item:not(:last-child) {
     margin-bottom: 0.9375rem; } }
-  @media only screen and (min-width: 491px) {
+      @media only screen and (min-width: 491px) {
 
   .otdel .slider-counter {
     display: none; } }
-  @media only screen and (max-width: 490px) {
+      @media only screen and (max-width: 490px) {
 
   .otdel-slider-wrap .dots-wrap {
     display: none; }
@@ -3470,7 +3628,7 @@ body, .out {
 
   .wide-slider {
     margin-right: 0; } }
-  @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 480px) {
 
   .header-row-bottom .logo {
     width: 3.4375rem;
@@ -3492,7 +3650,7 @@ body, .out {
 
   .header-bottom-mobnav-btn {
     width: 3.125rem; } }
-  @media only screen and (max-width: 430px) {
+      @media only screen and (max-width: 430px) {
 
   .dropdown-content .spec-link {
     padding: 1.25rem 0.9375rem; }
@@ -3500,21 +3658,21 @@ body, .out {
   .dropdown-content .spec-link-title {
     font-size: 1rem;
     margin-bottom: 0.625rem; } }
-  @media only screen and (max-width: 400px) {
+      @media only screen and (max-width: 400px) {
 
   .dropdown-content .content-block {
     width: 100%;
     margin-top: 0.9375rem; } }
-  @media only screen and (max-width: 380px) {
+      @media only screen and (max-width: 380px) {
 
   .box {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem; } }
-  @media only screen and (max-width: 360px) {
+      @media only screen and (max-width: 360px) {
 
   .header-mainwrap .top-link.primary {
     line-height: 2.625rem; } }
-  @media only screen and (max-width: 355px) {
+      @media only screen and (max-width: 355px) {
 
   .header-mainwrap .top-link.primary {
     padding-left: 0.8125rem;
@@ -3523,7 +3681,7 @@ body, .out {
     height: 1.875rem;
     line-height: 1.75rem;
     margin-top: 0; } }
-  @media only screen and (max-width: 350px) {
+      @media only screen and (max-width: 350px) {
 
   .footer-right {
     width: 12.5rem; }
@@ -3541,7 +3699,7 @@ body, .out {
   .footer-left {
     width: -webkit-calc(100% - 12.5rem);
     width: calc(100% - 12.5rem); } }
-  @media only screen and (max-width: 330px) {
+      @media only screen and (max-width: 330px) {
 
   .section-inner {
     padding: 1.3125rem 1.25rem 1.25rem; } }
