--- a/src/sass/lib/_root.scss
+++ b/src/sass/lib/_root.scss
@@ -15,6 +15,7 @@ $colors: (
   bggray: #f8fcfa,
   bcolor: #c3c3c3,
   hborder: #e6e6e6,
+  error: #bb0000,
 );
 :root {
   // each item in color map
